tests/NormalTests/paczka1/fuzzy1/74917477.err
Error in line 1: enfanrVx S54 88,6
Error in line 3: enfanrVx S332 10,0
Error in line 9: enfanrVx S833 66,0
Error in line 17: V2MGjn3hZj S833 90,8
Error in line 20: V2MGjn3hZj S54 75,0
Error in line 21: V2MGjn3hZj S332 37,2
Error in line 13: 1RK S833 2,0
